# tycoon-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
src/: app.py  dependencies.py  models.py  settings.py  utils.py
src/routes/: auth.py  economy.py
