[project]
name = "tycoon-api"
version = "0.1.0"
description = "A tyocoon game API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "beanie>=1.27.0",
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.5",
    "motor>=3.6.0",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.1",
    "rich>=13.9.4",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"